login/src/main/java/com/example/login/global/error/ErrorResponse.java
package com.example.login.global.error;

import lombok.*;

@Getter
@AllArgsConstructor
public class ErrorResponse {

    private final int status;

    private final String message;
    
}
